slightly delay logo transition to prevent invisibility when coming from offshore

--- a/assets/styles/src/style.css
+++ b/assets/styles/src/style.css
@@ -184,7 +184,7 @@ html, body, .dc-site-contents, .layer{
 		}
 			.committee-header h1 svg path{
 				fill: #000000;
-				transition: fill .3s ease-in-out;
+				transition: fill .3s .3s ease-in-out;
 			}
 		.committee-header--logo__full,
 		.committee-header--logo__small{
